--- a/assignments/Personal Portofolio/contactme.html
+++ b/assignments/Personal Portofolio/contactme.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="images/portofolio.ico">
+
+    <link rel="icon" type="image/x-icon" href="images/porto.ico">
 </head>
 
 <body>
@@ -30,23 +30,28 @@
             <h2>Send me a message</h2>
             <form>
 
-                <input type="text" placeholder="Email" id="email" required><br>
+                <input type="text" placeholder="Email" id="email" required class="email"><br>
 
 
 
                 <textarea name="text" id="text" cols="50" rows="5" placeholder="What do you want to say?"></textarea>
                 <br>
-                <input type="submit" value="Send Message!">
+                <input type="submit" value="Send Message!" class="submit">
             </form>
         </section>
-        <section class="conectwithme">
+        <article class="connect">
             <h2>Connect with me</h2>
+            <section id="icons">
 
-            <figure> <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
-                <a href="https://www.instagram.com" target="_blank" class="fa fa-linkedin"></a>
-                <a href="https://www.linkedin.com" target="_blank" class="fa fa-instagram"></a>
-            </figure>
-        </section>
+                <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.webp" alt="facebook"> </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <figure><img src="images/insta.webp" alt="instagram" ></figure>
+                </a>
+                <a href="https://www.linkedin.com" target="_blank">
+                    <figure><img src="images/linkdl.png" alt="linkedin"></figure>
+                </a>
+            </section>
+        </article>
     </main>
     <footer>
         <p>All rights reserved Rinesa Zylfiu &#169;</p>
