--- a/assignments/Personal Portofolio/home.html
+++ b/assignments/Personal Portofolio/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portofolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="images/portofolio.ico">
+    <link rel="icon" type="image/x-icon" href="images/porto.ico">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
             <h2>Who is <ins>Rinesa Zylfiu?</ins> </h2>
 
-            <figure> <img src="images/sunset.webp" alt="sunset"></figure>
+            <figure> <img src="images/girlicon.jpeg" alt="girlicon" class="girlicon"></figure>
 
             <p>
                 My name is Rinesa Zylfiu and I am currently studying Computer Science and Engineering.
@@ -53,19 +53,20 @@
                 <li class="li1">
                     <h4>Primary School</h4>
                     <ul>
-                        <li><b>Thimi Mitko</b>(2009-2018)</li>
+                        <li class="education"><b>Thimi Mitko</b>(2009-2018)</li>
                     </ul>
                 </li>
                 <li class="li1">
                     <h4>High School</h4>
                     <ul>
-                        <li><b>Xhavit Ahmeti</b>(2018-2021)</li>
+                        <li class="education"><b>Xhavit Ahmeti</b>(2018-2021)</li>
                     </ul>
                 </li>
                 <li class="li1">
                     <h4>University</h4>
                     <ul>
-                        <li>Bachelos`s degree in <b>Computer Science</b> from the <em>University of Bussines and
+                        <li class="education">Bachelos`s degree in <b>Computer Science</b> from the <em>University of
+                                Bussines and
                                 Technoology</em>(2021-2024)</li>
                     </ul>
                 </li>
@@ -74,7 +75,7 @@
         <article class="article3">
 
             <h2>My Skills</h2>
-            <table border="1">
+            <table>
                 <tr>
                     <th>#</th>
                     <th>Englisht Language</th>
@@ -99,9 +100,9 @@
         <article class="article4">
             <h2>My Projects</h2>
             <ol>
-                <li class="li4">Project 1 <a href="projects.html" target="_blank" class="a2">&#8594;</a></li>
-                <li class="li4">Project 2 <a href="projects.html" target="_blank" class="a2">&#8594;</a></li>
-                <li class="li4">Project 3 <a href="projects.html" target="_blank" class="a2">&#8594;</a></li>
+                <li class="li4">Project 1 <a href="projects.html#p1" target="_blank" class="a2">&#8656;</a></li>
+                <li class="li4">Project 2 <a href="projects.html#p2" target="_blank" class="a2">&#8656;</a></li>
+                <li class="li4">Project 3 <a href="projects.html#p3" target="_blank" class="a2">&#8656;</a></li>
             </ol>
         </article>
     </main>
