--- a/assignments/Personal Portofolio/projects.html
+++ b/assignments/Personal Portofolio/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Projects</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="images/portofolio.ico">
+    <link rel="icon" type="image/x-icon" href="images/porto.ico">
 </head>
 
 <body>
