--- a/assignments/Personal Portofolio/contactme.html
+++ b/assignments/Personal Portofolio/contactme.html
@@ -43,12 +43,13 @@
             <h2>Connect with me</h2>
             <section id="icons">
 
-                <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.webp" alt="facebook"> </a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.webp" alt="facebook"
+                        class="socialmedia"> </a>
                 <a href="https://www.instagram.com" target="_blank">
-                    <figure><img src="images/insta.webp" alt="instagram" ></figure>
+                    <figure><img src="images/insta.webp" alt="instagram" class="socialmedia"></figure>
                 </a>
                 <a href="https://www.linkedin.com" target="_blank">
-                    <figure><img src="images/linkdl.png" alt="linkedin"></figure>
+                    <figure><img src="images/linkedin.png" alt="linkedin" class="socialmedia"></figure>
                 </a>
             </section>
         </article>
