--- a/assignments/Personal Portofolio/home.html
+++ b/assignments/Personal Portofolio/home.html
@@ -100,9 +100,9 @@
         <article class="article4">
             <h2>My Projects</h2>
             <ol>
-                <li class="li4">Project 1 <a href="projects.html#p1" target="_blank" class="a2">&#8656;</a></li>
-                <li class="li4">Project 2 <a href="projects.html#p2" target="_blank" class="a2">&#8656;</a></li>
-                <li class="li4">Project 3 <a href="projects.html#p3" target="_blank" class="a2">&#8656;</a></li>
+                <li class="li4">Project 1 <a href="projects.html#p1"  class="a2">&#8656;</a></li>
+                <li class="li4">Project 2 <a href="projects.html#p2"  class="a2">&#8656;</a></li>
+                <li class="li4">Project 3 <a href="projects.html#p3"  class="a2">&#8656;</a></li>
             </ol>
         </article>
     </main>
