--- a/assignments/Personal Portofolio/projects.html
+++ b/assignments/Personal Portofolio/projects.html
@@ -13,7 +13,7 @@
 
     <header>
         <hr>
-        <h1>Project</h1>
+        <h1>My Projects</h1>
         <nav>
             <ul class="pages">
                 <li class="li0"><a href="home.html" target="_blank" class="myPage">Personal Portofolio &#127968;</a>
@@ -38,8 +38,8 @@
                     easily edit and post videos with various effects, filters, and soundtracks. </p>
             </article>
         </section>
-
         <section>
+
             <article class="project2">
                 <h2 id="p2">Project 2</h2>
                 <figure>
@@ -53,7 +53,6 @@
 
             </article>
         </section>
-
         <section>
             <article class="project3">
                 <h2 id="p3">Project 3</h2>
