--- a/assignments/Personal Portofolio/contactme.html
+++ b/assignments/Personal Portofolio/contactme.html
@@ -17,7 +17,7 @@
 
         <nav>
             <ul class="pages">
-                <li class="li0"><a href="home.html" target="_blank" class="myPage">Personal Portofolio &#127968;</a>
+                <li class="li0"><a href="home.html" target="_blank" class="myPage">Personal Portfolio &#127968;</a>
                 </li> |
                 <li class="li0"><a href="projects.html" target="_blank" class="myPage">My Projects &#128640;</a></li>
             </ul>
