--- a/assignments/Personal Portofolio/projects.html
+++ b/assignments/Personal Portofolio/projects.html
@@ -16,7 +16,7 @@
         <h1>My Projects</h1>
         <nav>
             <ul class="pages">
-                <li class="li0"><a href="home.html" target="_blank" class="myPage">Personal Portofolio &#127968;</a>
+                <li class="li0"><a href="home.html" target="_blank" class="myPage">Personal Portfolio &#127968;</a>
                 </li> |
                 <li class="li0"><a href="contactme.html" target="_blank" class="myPage">Contact Me &#128153;</a></li>
             </ul>
