--- a/assignments/Personal Portofolio/home.html
+++ b/assignments/Personal Portofolio/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portofolio</title>
+    <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/porto.ico">
 </head>
