--- a/assignments/A Colorful Page/aColorfulPage.html
+++ b/assignments/A Colorful Page/aColorfulPage.html
@@ -18,34 +18,34 @@
             </ul>
 
         </nav>
-</header>
-        <main>
-            <section>
-                <article>
-                    The mountains are a breathtaking display of nature's power and beauty. With their towering peaks,
+    </header>
+    <main>
+        <section>
+            <article>
+                <p> The mountains are a breathtaking display of nature's power and beauty. With their towering peaks,
                     rugged terrain, and serene vistas, they can inspire awe, challenge physical limits, and provide
                     moments of peace and reflection. The mountains have a way of making us feel small in the grand
                     scheme of the world, yet connected to something larger than ourselves. They are a reminder of the
                     Earth's incredible diversity and the importance of preserving and protecting these majestic
                     landscapes for future generations to enjoy. Whether climbing to the summit, skiing down the slopes,
                     or simply gazing at their majesty from a distance, the mountains offer a profound sense of
-                    adventure, tranquility, and wonder
-                </article>
+                    adventure, tranquility, and wonder</p>
+            </article>
 
 
-                <br><br>
-                <article>
-                    The sky is a vast expanse of ever-changing beauty that captivates our senses and ignites our
+            <br><br>
+            <article>
+                <p> The sky is a vast expanse of ever-changing beauty that captivates our senses and ignites our
                     imaginations. Whether painted with the pinks and oranges of a sunrise, the blues and whites of a
                     clear day, or the purples and golds of a sunset, the sky never fails to evoke a sense of wonder and
                     awe. It is a canvas that nature uses to showcase its power and majesty, reminding us of our place in
                     the universe and the interconnectedness of all things. The sky is a constant presence, a silent
                     observer to the comings and goings of life on Earth, a source of inspiration and solace for those
-                    who take the time to gaze up and marvel at its infinite beauty.
-                </article>
-            </section>
-        </main>
-    
+                    who take the time to gaze up and marvel at its infinite beauty.</p>
+            </article>
+        </section>
+    </main>
+
 
 </body>
 
