--- a/assignments/Box-Model Demonstration/box-model.html
+++ b/assignments/Box-Model Demonstration/box-model.html
@@ -10,12 +10,14 @@
 
 <body>
     <main>
-    <section>
-    <p>Programming is the art of giving instructions to a computer in order to perform specific tasks. It involves
-        writing code using languages like Python, Java, or C++. Programmers must think logically, solve problems, and
-        pay attention to detail. It is a versatile skill that is used in various industries worldwide.</p>
-</section>
-</main>
+        <section>
+            <p>Programming is the art of giving instructions to a computer in order to perform specific tasks. It
+                involves
+                writing code using languages like Python, Java, or C++. Programmers must think logically, solve
+                problems, and
+                pay attention to detail. It is a versatile skill that is used in various industries worldwide.</p>
+        </section>
+    </main>
 </body>
 
 </html>
