--- a/assignments/Changing the font/changingTheFont.html
+++ b/assignments/Changing the font/changingTheFont.html
@@ -13,7 +13,7 @@
         <h1>This is a title</h1>
     </header>
     <main>
-        <article class="artile1">
+        <article class="article1">
             <section>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non numquam culpa ea corrupti aliquam
                     suscipit maiores soluta, libero necessitatibus quibusdam voluptas est sapiente consequatur pariatur
@@ -29,7 +29,7 @@
             </section>
         </article>
         <hr>
-        
+
         <article class="article2">
             <section>
 
@@ -53,7 +53,7 @@
 
             </section>
         </article>
-        
+
 
     </main>
 </body>
