--- a/assignments/Personal Portofolio/home.html
+++ b/assignments/Personal Portofolio/home.html
@@ -19,8 +19,8 @@
         <nav>
 
             <ul class="pages">
-                <li class="li0"><a href="projects.html" target="_blank" class="myPage">My Projects &#128640;</a> </li> |
-                <li class="li0"><a href="contactme.html" target="_blank" class="myPage">Contact Me! &#128153;</a> </li>
+                <li class="listofPages"><a href="projects.html" target="_blank" class="myPage">My Projects &#128640;</a> </li> |
+                <li class="listofPages"><a href="contactme.html" target="_blank" class="myPage">Contact Me! &#128153;</a> </li>
 
             </ul>
         </nav>
@@ -30,7 +30,7 @@
     <main>
 
 
-        <article class="article1">
+        <article class="article1 card">
 
             <h2>Who is <ins>Rinesa Zylfiu?</ins> </h2>
 
@@ -46,33 +46,33 @@
 
 
         </article>
-        <article class="article2">
+        <article class="article2 card">
             <h2>Education</h2>
 
-            <ul class="ul2">
-                <li class="li1">
+            <ul class="education">
+                <li class="listofSchool">
                     <h4>Primary School</h4>
                     <ul>
-                        <li class="education"><b>Thimi Mitko</b>(2009-2018)</li>
+                        <li class="nameofSchool"><b>Thimi Mitko</b>(2009-2018)</li>
                     </ul>
                 </li>
-                <li class="li1">
+                <li class="listofSchool">
                     <h4>High School</h4>
                     <ul>
-                        <li class="education"><b>Xhavit Ahmeti</b>(2018-2021)</li>
+                        <li class="nameofSchool"><b>Xhavit Ahmeti</b>(2018-2021)</li>
                     </ul>
                 </li>
-                <li class="li1">
+                <li class="listofSchool">
                     <h4>University</h4>
                     <ul>
-                        <li class="education">Bachelos`s degree in <b>Computer Science</b> from the <em>University of
+                        <li class="nameofSchool">Bachelos`s degree in <b>Computer Science</b> from the <em>University of
                                 Bussines and
                                 Technoology</em>(2021-2024)</li>
                     </ul>
                 </li>
             </ul>
         </article>
-        <article class="article3">
+        <article class="article3 card">
 
             <h2>My Skills</h2>
             <table>
@@ -97,12 +97,12 @@
             </table>
         </article>
 
-        <article class="article4">
+        <article class="article4 card">
             <h2>My Projects</h2>
             <ol>
-                <li class="li4">Project 1 <a href="projects.html#p1"  class="a2">&#8656;</a></li>
-                <li class="li4">Project 2 <a href="projects.html#p2"  class="a2">&#8656;</a></li>
-                <li class="li4">Project 3 <a href="projects.html#p3"  class="a2">&#8656;</a></li>
+                <li class="nameofProjects">Project 1 <a href="projects.html#p1"  class="projecsLink">&#8656;</a></li>
+                <li class="nameofProjects">Project 2 <a href="projects.html#p2"  class="projecsLink">&#8656;</a></li>
+                <li class="nameofProjects">Project 3 <a href="projects.html#p3"  class="projecsLink">&#8656;</a></li>
             </ol>
         </article>
     </main>
