--- a/assignments/Personal Portofolio/projects.html
+++ b/assignments/Personal Portofolio/projects.html
@@ -16,9 +16,9 @@
         <h1>My Projects</h1>
         <nav>
             <ul class="pages">
-                <li class="li0"><a href="home.html" target="_blank" class="myPage">Personal Portfolio &#127968;</a>
+                <li class="listofPages"><a href="home.html" target="_blank" class="myPage">Personal Portfolio &#127968;</a>
                 </li> |
-                <li class="li0"><a href="contactme.html" target="_blank" class="myPage">Contact Me &#128153;</a></li>
+                <li class="listofPages"><a href="contactme.html" target="_blank" class="myPage">Contact Me &#128153;</a></li>
             </ul>
         </nav>
         <hr>
@@ -26,7 +26,7 @@
 
     <main>
         <section>
-            <article class="project1">
+            <article class="project1 projectscard">
                 <h2 id="p1">Project 1</h2>
 
                 <figure><img src="images/tiktok.png" alt="Tiktok" class="imgpro"></figure>
@@ -40,7 +40,7 @@
         </section>
         <section>
 
-            <article class="project2">
+            <article class="project2 projectscard">
                 <h2 id="p2">Project 2</h2>
                 <figure>
                     <img src="images/pinterest.png" alt="Pinterest" class="imgpro">
@@ -54,7 +54,7 @@
             </article>
         </section>
         <section>
-            <article class="project3">
+            <article class="project3 projectscard">
                 <h2 id="p3">Project 3</h2>
 
                 <figure>
