--- a/assignments/Centering a div/centeringDiv.html
+++ b/assignments/Centering a div/centeringDiv.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <div class="content">
-        <div class="box">
 
-            <h1>I am centred</h1>
-            <p>I am some random text</p>
+    <div class="box">
 
-        </div>
+        <h1>I am centered</h1>
+        <p>I am some random text</p>
+
     </div>
+
 </body>
 
 </html>
