--- a/assignments/Creating a card/Card.html
+++ b/assignments/Creating a card/Card.html
@@ -22,7 +22,7 @@
                 </div>
 
             </section>
-            <section class="card-image dFlex">
+            <section class="card-image">
                 <p> &#169; 1979 Marvel <br> Cosmics Group</p>
                 <figure><img src="images/marvel.png" alt="Marvel"></figure>
 
@@ -64,7 +64,7 @@
                 </div>
 
             </section>
-            <section class="card-image dFlex">
+            <section class="card-image">
                 <p> &#169; 1979 Marvel <br> Cosmics Group</p>
                 <figure><img src="images/marvel.png" alt="Marvel"></figure>
 
@@ -85,9 +85,11 @@
                 </div>
 
             </section>
-            <section class="card-image dFlex">
+            <section class="card-image">
                 <p> &#169; 1979 Marvel <br> Cosmics Group</p>
-                <figure><img src="images/marvel.png" alt="Marvel"></figure>
+                <figure>
+                    <img src="images/marvel.png" alt="Marvel">
+                </figure>
 
             </section>
 
