--- a/assignments/Grid Blogposts/blogposts.html
+++ b/assignments/Grid Blogposts/blogposts.html
@@ -40,9 +40,9 @@
                             HTML</span>
                     </p>
                 </div>
-
-                <figure> <img src="images/boy.jpeg" alt="boy" class="boyImg"></figure>
-
+                <div>
+                    <figure> <img src="images/boy.jpeg" alt="boy" class="boyImg"></figure>
+                </div>
             </div>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam libero aliquid autem
                 doloremque?
