--- a/projects/Final Project CSS/CoolPage.html
+++ b/projects/Final Project CSS/CoolPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel</title>
+    <title>Hotels</title>
     <!--Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,80 +16,80 @@
 
 </head>
 
-<body class="dGrid gap20">
+<body class="dGrid">
 
 
     <aside class="sidebar ">
-        <div class="dGrid">
-            <p>CP</p>
+        <div class="dGrid padding10">
+            <p>C<span>P</span></p>
             <p>COOL PAGE</p>
         </div>
-        <hr>
-        <div class="dGrid content-center">
+
+        <div class="dGrid content-center padding10 border">
 
             <figure><img src="assets/images/avatar.jpg" alt="Avatar" class="avatar"></figure>
             <p>Rinesa Zylfiu</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <hr>
 
-        <div class="bgRed dGrid content-center">
+
+        <div class="bgRed dGrid content-center padding10">
             <figure><img src="assets/icons/asides/asideDashboard.svg" alt="Dashboard" class="icons"></figure>
             <p>Dashboard</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/pages.svg" alt="Pages" class="icons"></figure>
             <p>Pages</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/components.svg" alt="Components" class="icons"></figure>
             <p>Components</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/form.svg" alt="Forms" class="icons"></figure>
             <p>Forms</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/table.svg" alt="Tables" class="icons"></figure>
             <p>Tables</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/map.svg" alt="Maps" class="icons"></figure>
             <p>Maps</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/widget.svg" alt="Widgets" class="icons"></figure>
             <p>Widgets</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/chart.svg" alt="charts" class="icons"></figure>
             <p>Charts</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
-        <div class="hoverBg dGrid content-center">
+        <div class="hoverBg dGrid content-center padding10">
             <figure><img src="assets/icons/asides/calendar.svg" alt="Calendar" class="icons"></figure>
             <p>Calendar</p>
             <figure><img src="assets/icons/asides/expandMore.svg" alt="Expand More" class="icons"></figure>
 
         </div>
     </aside>
-    <div class="Fullpage">
+    <div class="Fullpage padding10">
         <header>
             <div class=" dFlex gap20 space-between mainHeader">
                 <div class="dFlex gap20">
@@ -135,13 +135,13 @@
 
                         </div>
                     </div>
-                    <figure  title="Profile"><img src="assets/icons/header/headerAvatar.svg" alt="Avatar">
+                    <figure title="Profile"><img src="assets/icons/header/headerAvatar.svg" alt="Avatar">
                     </figure>
                 </div>
             </div>
             <div class="headerMedia">
                 <p>Dashboard</p>
-                <figure title="Menu"><img src="assets/icons/header/menu.svg" alt="menu" ></figure>
+                <figure title="Menu"><img src="assets/icons/header/menu.svg" alt="menu"></figure>
 
             </div>
 
@@ -166,9 +166,9 @@
                         <hr>
                         <div class="Info-states dGrid padding10 ">
                             <figure><img src="assets/flags/germany.svg" alt="Germany" class="flags"></figure>
-                            <span>
-                                <p>Germany</p>
-                            </span>
+
+                            <p>Germany</p>
+
                             <p>1.300</p>
                             <p>4.34%</p>
                         </div>
@@ -212,7 +212,7 @@
             </section>
             <section class="Info dGrid marginT60 ">
                 <div class="aboutHotel dGrid ">
-                    <article class="hotelInfo mainCards">
+                    <article class=" mainCards">
                         <div class=" dFlex space-between">
                             <div>
                                 <figure class="cardsLogo padding20 bgOrange"><img src="assets/icons/cards/couch.svg"
@@ -232,7 +232,7 @@
 
 
                     </article>
-                    <article class="hotelInfo mainCards">
+                    <article class=" mainCards">
                         <div class=" dFlex space-between">
                             <div>
                                 <figure class="cardsLogo padding20 bgPink"><img src="assets/icons/cards/equalizer.svg"
@@ -278,13 +278,13 @@
 
 
                     </article>
-                    <article class="hotelInfo mainCards">
+                    <article class=" mainCards">
                         <div class=" dFlex space-between">
                             <div>
                                 <figure class="cardsLogo padding20 bgBlue"><img src="assets/icons/cards/public.svg"
                                         alt="public"></figure>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center ">
                                 <p class="Graytxt">Followers
                                 </p>
                                 <h3>+245</h3>
@@ -308,15 +308,16 @@
 
 
                     <article class="mainCards text-center ">
+                        <div class="ListingCard">
+                            <figure class="CardFig"><img src="assets/images/card-1.jpeg" alt="card-1"></figure>
+                            <div class="cardOptions dFlex gap20 content-center">
 
-                        <figure class="CardFig"><img src="assets/images/card-1.jpeg" alt=""></figure>
-                        <div class="cardOptions dFlex gap20 content-center">
-                            <figure title="view"><img src="assets/icons/cards/view.svg" alt="view"></figure>
-                            <figure title="edit"><img src="assets/icons/cards/edit.svg" alt="edit"></figure>
-                            <figure title="delete"><img src="assets/icons/cards/delete.svg" alt="delete"></figure>
+                                <figure title="View"><img src="assets/icons/cards/view.svg" alt="view"></figure>
+                                <figure title="Edit"><img src="assets/icons/cards/edit.svg" alt="edit"></figure>
+                                <figure title="Delete"><img src="assets/icons/cards/delete.svg" alt="delete"></figure>
+                            </div>
                         </div>
-
-                        <div class="hotelDsp">
+                        <div>
                             <h3>Cozy 5 Apartment</h3>
                             <p class="Graytxt padding20">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Nobis, itaque libero velit, hic
@@ -339,13 +340,15 @@
 
 
                     <article class="mainCards text-center">
-                        <figure class="CardFig"><img src="assets/images/card-2.jpeg" alt=""></figure>
-                        <div class="cardOptions dFlex gap20 content-center">
-                            <figure title="view"><img src="assets/icons/cards/view.svg" alt=""></figure>
-                            <figure title="edit"><img src="assets/icons/cards/edit.svg" alt=""></figure>
-                            <figure title="delete"><img src="assets/icons/cards/delete.svg" alt=""></figure>
+                        <div class="ListingCard">
+                            <figure class="CardFig"><img src="assets/images/card-2.jpeg" alt="card-2"></figure>
+                            <div class="cardOptions dFlex gap20 content-center">
+                                <figure title="View"><img src="assets/icons/cards/view.svg" alt="view"></figure>
+                                <figure title="Edit"><img src="assets/icons/cards/edit.svg" alt="edit"></figure>
+                                <figure title="Delete"><img src="assets/icons/cards/delete.svg" alt="delete"></figure>
+                            </div>
                         </div>
-                        <div class="hotelDsp">
+                        <div>
                             <h3>Office Studio</h3>
                             <p class="Graytxt padding20 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Nobis, itaque libero
@@ -364,13 +367,19 @@
                         </div>
                     </article>
                     <article class=" mainCards text-center">
-                        <figure class="CardFig"><img src="assets/images/card-3.jpeg" alt="photo"></figure>
-                        <div class="cardOptions dFlex gap20 content-center">
-                            <figure title="view"><img src="assets/icons/cards/view.svg" alt="view" ></figure>
-                            <figure title="edit"><img src="assets/icons/cards/edit.svg" alt="edit"></figure>
-                            <figure title="delete"><img src="assets/icons/cards/delete.svg" alt="delete"></figure>
+
+
+                        <div class="ListingCard">
+                            <figure class="CardFig"><img src="assets/images/card-3.jpeg" alt="card-3"></figure>
+                            <div class="cardOptions dFlex  gap20 content-center">
+
+                                <figure title="View"><img src="assets/icons/cards/view.svg" alt="view"></figure>
+                                <figure title="Edit"><img src="assets/icons/cards/edit.svg" alt="edit"></figure>
+                                <figure title="Delete"><img src="assets/icons/cards/delete.svg" alt="delete"></figure>
+                            </div>
                         </div>
-                        <div class="hotelDsp">
+
+                        <div>
                             <h3>Beautiful Castle</h3>
                             <p class="Graytxt padding20">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                 Nobis, itaque libero
@@ -401,7 +410,7 @@
         <hr>
         <footer class="dFlex gap20 space-between padding10">
 
-            <div class=" dFlex gap20 padding20">
+            <div class=" dFlex gap20 padding10">
                 <h4>Home</h4>
                 <h4>Company</h4>
                 <h4>Portfolio</h4>
