--- a/FMACSS-Framework/index.html
+++ b/FMACSS-Framework/index.html
@@ -87,16 +87,18 @@
                         </select>
 
                     </form>
-
-                    <button class="btn m-2 text-uppercase">Find Now</button>
+                    <button class="btn text-uppercase p-relative bottom-shadow m-2">
+                        <span class="btn-text-one p-absolute img-xxl">Find Now</span>
+                        <span class="btn-text-two p-absolute img-xxl">Find Now</span>
+                    </button>
 
                 </div>
             </div>
         </section>
-        <div class="p-4 bgline ">
+        <div class="p-4 bgline all-page-p ">
             <section class="aboutUs dGrid align-center just-between">
                 <article class="m-3  content ">
-                    <p class="p-content">about us:</p>
+                    <p class="p-content ">about us:</p>
                     <h1 class="text-uppercase img-lg font-size-30">When passion and adventure collide, they ignite the
                         flames of your
                         wanderlust, driving your
@@ -104,7 +106,10 @@
                         to
                         explore.
                     </h1>
-                    <button class="btn text-uppercase">Learn more</button>
+                    <button class="btn text-uppercase p-relative bottom-shadow m-top">
+                        <span class="btn-text-one p-absolute img-xxl">Learn More</span>
+                        <span class="btn-text-two p-absolute img-xxl">Learn More</span>
+                    </button>
                 </article>
 
                 <article class="swiper mySwiper">
@@ -300,7 +305,10 @@
 
                 </section>
                 <div class="dFlex just-center align-center m-5 p-3">
-                    <button class="btn text-uppercase">Explore All</button>
+                    <button class="btn text-uppercase p-relative bottom-shadow ">
+                        <span class="btn-text-one p-absolute img-xxl">Explore All</span>
+                        <span class="btn-text-two p-absolute img-xxl">Explore All</span>
+                    </button>
                 </div>
             </div>
 
@@ -312,7 +320,7 @@
                     </div>
                 </div>
                 <div class="aboutCitys dGrid ">
-                    <article class="city-content dGrid align-center just-center g-8" >
+                    <article class="city-content dFlex align-center just-between g-8">
                         <div class="city-info">
                             <h1 class="text-uppercase">Amsterdam</h1>
                             <p>Amsterdam, a city of charming canals and eclectic architecture, epitomizes Dutch culture
@@ -326,7 +334,7 @@
 
 
 
-                    <article class="city-content dGrid align-center just-center g-8">
+                    <article class="city-content dFlex align-center just-between g-8">
                         <figure class="city-img p-0"><img src="assets/img/grece.jpg" alt="Amsterdam"></figure>
                         <div class="city-info">
                             <h1 class="text-uppercase">Greece</h1>
@@ -339,7 +347,7 @@
 
                     </article>
 
-                    <article class="city-content dGrid align-center just-center g-8">
+                    <article class="city-content dFlex align-center just-between g-8">
                         <div class="city-info">
                             <h1 class="text-uppercase">Italy</h1>
                             <p>Italy, a cradle of art, history, and romance, boasts architectural marvels like the
@@ -367,21 +375,25 @@
 
 
             <section class="discount">
-                <div class="discount-content p-relative">
+                <div class="discount-content m-0 dFlex align-center just-between gap-12">
 
-                    <figure><img src="assets/img/main-object.png" alt="" class="p-absolute"></figure>
-                    <div class="discount-info p-absolute">
+                    <figure class="m-4" ><img src="assets/img/main-object.png" alt="" ></figure>
+                    <div class="discount-info p-relative ">
                         <h1 class="text-uppercase">Interested?</h1>
                         <h3 class="text-uppercase">Discount if you book now</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, corporis! Amet
                             architecto
                             placeat suscipit earum? Ab sapiente omnis labore ducimus assumenda, porro itaque sed aut
                             repudiandae, quam cupiditate corporis animi!</p>
-                        <button class="btn text-uppercase">Get in touch</button>
-                    </div>
+                            <button class="btn text-uppercase p-relative bottom-shadow ">
+                                <span class="btn-text-one p-absolute img-xxl">Get in touch</span>
+                                <span class="btn-text-two p-absolute img-xxl">Get in touch</span>
+                            </button>
 
-                    <div class="discount-offer text-center row-direction align-center just-center p-absolute">
-                        <span>30%</span> <span>OFF</span>
+
+                        <div class="discount-offer text-center row-direction align-center just-center p-absolute">
+                            <span>30%</span> <span>OFF</span>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -459,7 +471,7 @@
                         <figure><img src="assets/img/travel.png" alt=""></figure>
                         <h2 class="text-uppercase">Specail Activities</h2>
                     </div>
-                    <div class="dFlex align-center gap-1 line-right">
+                    <div class="dFlex align-center gap-1 line-right border-none">
                         <figure><img src="assets/img/bestguide.png" alt=""></figure>
                         <h2 class="text-uppercase">Best Guide</h2>
                     </div>
